# tree-sitter-story

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  example-file.story  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-story.pc.in
bindings/c/tree_sitter/: tree-sitter-story.h
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_story/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterStoryTests/: TreeSitterStoryTests.swift
queries/: highlights.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: structure.txt
test/highlight/: elements.story
test/tags/: basic.story
